Updated author details

--- a/public/index.html
+++ b/public/index.html
@@ -603,7 +603,7 @@
     
     <h1>Biography</h1>
 
-    <p>Alex Whitelock-Wainwright is a research fellow in learning analytics at Monash University. His research interests include distributed robotics, mobile computing and programmable matter. He leads the Robotic Neurobiology group, which develops self-reconfiguring robots, systems of self-organizing robots, and mobile sensor networks.</p>
+    <p>Alex Whitelock-Wainwright is a research fellow in learning analytics at Monash University. His research interests include the application of learning analytics to explore information seeking behaviour, and the application of psychometric methods to evaluate established survey instruments.</p>
 
 
     <div class="row">
